--- a/css/app.css
+++ b/css/app.css
@@ -110,3 +110,12 @@ h1 {
 .off {
     pointer-events: none;
 }
+
+.success {
+    width: 300px;
+    height: 40px;
+    border: 1px solid;
+    border-radius: 5px;
+    text-align: center;
+    text-transform: uppercase;
+}
